@@ -2566,22 +2566,13 @@ literal|"init: hit exception on init; releasing write lock"
 argument_list|)
 expr_stmt|;
 block|}
-try|try
-block|{
-name|writeLock
+name|IOUtils
 operator|.
-name|release
-argument_list|()
+name|closeWhileHandlingException
+argument_list|(
+name|writeLock
+argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Throwable
-name|t
-parameter_list|)
-block|{
-comment|// don't mask the original exception
-block|}
 name|writeLock
 operator|=
 literal|null
@@ -3203,7 +3194,7 @@ condition|)
 block|{
 name|writeLock
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 comment|// release write lock
@@ -6837,7 +6828,119 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-comment|/**    * Adds all segments from an array of indexes into this index.    *    *<p>This may be used to parallelize batch indexing. A large document    * collection can be broken into sub-collections. Each sub-collection can be    * indexed in parallel, on a different thread, process or machine. The    * complete index can then be created by merging sub-collection indexes    * with this method.    *    *<p>    *<b>NOTE:</b> the index in each {@link Directory} must not be    * changed (opened by a writer) while this method is    * running.  This method does not acquire a write lock in    * each input Directory, so it is up to the caller to    * enforce this.    *    *<p>This method is transactional in how Exceptions are    * handled: it does not commit a new segments_N file until    * all indexes are added.  This means if an Exception    * occurs (for example disk full), then either no indexes    * will have been added or they all will have been.    *    *<p>Note that this requires temporary free space in the    * {@link Directory} up to 2X the sum of all input indexes    * (including the starting index). If readers/searchers    * are open against the starting index, then temporary    * free space required will be higher by the size of the    * starting index (see {@link #forceMerge(int)} for details).    *    *<p>    *<b>NOTE:</b> this method only copies the segments of the incoming indexes    * and does not merge them. Therefore deleted documents are not removed and    * the new segments are not merged with the existing ones.    *    *<p>This requires this index not be among those to be added.    *    *<p>    *<b>NOTE</b>: if this method hits an OutOfMemoryError    * you should immediately close the writer. See<a    * href="#OOME">above</a> for details.    *    * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    */
+comment|/** Acquires write locks on all the directories; be sure    *  to match with a call to {@link IOUtils#close} in a    *  finally clause. */
+DECL|method|acquireWriteLocks
+specifier|private
+name|List
+argument_list|<
+name|Lock
+argument_list|>
+name|acquireWriteLocks
+parameter_list|(
+name|Directory
+modifier|...
+name|dirs
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|List
+argument_list|<
+name|Lock
+argument_list|>
+name|locks
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|Lock
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|dirs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|boolean
+name|success
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+name|Lock
+name|lock
+init|=
+name|dirs
+index|[
+name|i
+index|]
+operator|.
+name|makeLock
+argument_list|(
+name|WRITE_LOCK_NAME
+argument_list|)
+decl_stmt|;
+name|locks
+operator|.
+name|add
+argument_list|(
+name|lock
+argument_list|)
+expr_stmt|;
+name|lock
+operator|.
+name|obtain
+argument_list|(
+name|config
+operator|.
+name|getWriteLockTimeout
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|success
+operator|=
+literal|true
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|success
+operator|==
+literal|false
+condition|)
+block|{
+comment|// Release all previously acquired locks:
+name|IOUtils
+operator|.
+name|closeWhileHandlingException
+argument_list|(
+name|locks
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+return|return
+name|locks
+return|;
+block|}
+comment|/**    * Adds all segments from an array of indexes into this index.    *    *<p>This may be used to parallelize batch indexing. A large document    * collection can be broken into sub-collections. Each sub-collection can be    * indexed in parallel, on a different thread, process or machine. The    * complete index can then be created by merging sub-collection indexes    * with this method.    *    *<p>    *<b>NOTE:</b> this method acquires the write lock in    * each directory, to ensure that no {@code IndexWriter}    * is currently open or tries to open while this is    * running.    *    *<p>This method is transactional in how Exceptions are    * handled: it does not commit a new segments_N file until    * all indexes are added.  This means if an Exception    * occurs (for example disk full), then either no indexes    * will have been added or they all will have been.    *    *<p>Note that this requires temporary free space in the    * {@link Directory} up to 2X the sum of all input indexes    * (including the starting index). If readers/searchers    * are open against the starting index, then temporary    * free space required will be higher by the size of the    * starting index (see {@link #forceMerge(int)} for details).    *    *<p>    *<b>NOTE:</b> this method only copies the segments of the incoming indexes    * and does not merge them. Therefore deleted documents are not removed and    * the new segments are not merged with the existing ones.    *    *<p>This requires this index not be among those to be added.    *    *<p>    *<b>NOTE</b>: if this method hits an OutOfMemoryError    * you should immediately close the writer. See<a    * href="#OOME">above</a> for details.    *    * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    * @throws LockObtainFailedException if we were unable to    *   acquire the write lock in at least one directory    */
 DECL|method|addIndexes
 specifier|public
 name|void
@@ -6858,6 +6961,22 @@ argument_list|(
 name|dirs
 argument_list|)
 expr_stmt|;
+name|List
+argument_list|<
+name|Lock
+argument_list|>
+name|locks
+init|=
+name|acquireWriteLocks
+argument_list|(
+name|dirs
+argument_list|)
+decl_stmt|;
+name|boolean
+name|successTop
+init|=
+literal|false
+decl_stmt|;
 try|try
 block|{
 if|if
@@ -7230,6 +7349,10 @@ name|checkpoint
 argument_list|()
 expr_stmt|;
 block|}
+name|successTop
+operator|=
+literal|true
+expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
@@ -7244,6 +7367,32 @@ argument_list|,
 literal|"addIndexes(Directory...)"
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|successTop
+condition|)
+block|{
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|locks
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|IOUtils
+operator|.
+name|closeWhileHandlingException
+argument_list|(
+name|locks
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 comment|/**    * Merges the provided indexes into this index.    *     *<p>    * The provided IndexReaders are not closed.    *     *<p>    * See {@link #addIndexes} for details on transactional semantics, temporary    * free space required in the Directory, and non-CFS segments on an Exception.    *     *<p>    *<b>NOTE</b>: if this method hits an OutOfMemoryError you should immediately    * close the writer. See<a href="#OOME">above</a> for details.    *     *<p>    *<b>NOTE:</b> empty segments are dropped by this method and not added to this    * index.    *     *<p>    *<b>NOTE:</b> this method merges all given {@link IndexReader}s in one    * merge. If you intend to merge a large number of readers, it may be better    * to call this method multiple times, each time with a small set of readers.    * In principle, if you use a merge policy with a {@code mergeFactor} or    * {@code maxMergeAtOnce} parameter, you should pass that many readers in one    * call.    *     *<p>    *<b>NOTE</b>: if you call {@link #close(boolean)} with<tt>false</tt>, which    * aborts all running merges, then any thread still running this method might    * hit a {@link MergePolicy.MergeAbortedException}.    *     * @throws CorruptIndexException    *           if the index is corrupt    * @throws IOException    *           if there is a low-level IO error    */
@@ -15910,7 +16059,7 @@ operator|.
 name|WRITE_LOCK_NAME
 argument_list|)
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 block|}
