@@ -212,7 +212,7 @@ argument_list|(
 name|lockName
 argument_list|)
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 if|if
@@ -648,11 +648,11 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|release
+DECL|method|close
 specifier|public
 specifier|synchronized
 name|void
-name|release
+name|close
 parameter_list|()
 throws|throws
 name|IOException
@@ -776,7 +776,7 @@ condition|(
 name|obtained
 condition|)
 block|{
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 block|}
@@ -827,7 +827,7 @@ if|if
 condition|(
 name|obtained
 condition|)
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 return|return
