@@ -127,10 +127,10 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|release
+DECL|method|close
 specifier|public
 name|void
-name|release
+name|close
 parameter_list|()
 block|{   }
 annotation|@
