@@ -328,10 +328,10 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|release
+DECL|method|close
 specifier|public
 name|void
-name|release
+name|close
 parameter_list|()
 throws|throws
 name|LockReleaseFailedException
@@ -349,6 +349,7 @@ operator|.
 name|delete
 argument_list|()
 condition|)
+block|{
 throw|throw
 operator|new
 name|LockReleaseFailedException
@@ -358,6 +359,7 @@ operator|+
 name|lockFile
 argument_list|)
 throw|;
+block|}
 block|}
 annotation|@
 name|Override
