@@ -332,6 +332,20 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|LockObtainFailedException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|MockDirectoryWrapper
 import|;
 end_import
@@ -347,6 +361,20 @@ operator|.
 name|store
 operator|.
 name|RAMDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|IOUtils
 import|;
 end_import
 
@@ -7536,6 +7564,126 @@ name|dest
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+block|}
+comment|/** Make sure an open IndexWriter on an incoming Directory    *  causes a LockObtainFailedException */
+DECL|method|testLocksBlock
+specifier|public
+name|void
+name|testLocksBlock
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|src
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|w1
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|src
+argument_list|)
+decl_stmt|;
+name|w1
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|w1
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|Directory
+name|dest
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|iwc
+operator|.
+name|setWriteLockTimeout
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|RandomIndexWriter
+name|w2
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dest
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|w2
+operator|.
+name|addIndexes
+argument_list|(
+name|src
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"did not hit expected exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|LockObtainFailedException
+name|lofe
+parameter_list|)
+block|{
+comment|// expected
+block|}
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|w1
+argument_list|,
+name|w2
+argument_list|,
+name|src
+argument_list|,
+name|dest
+argument_list|)
 expr_stmt|;
 block|}
 block|}
