@@ -1093,7 +1093,7 @@ block|}
 block|}
 name|lock
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 comment|// now lock with different dir
@@ -1127,7 +1127,7 @@ argument_list|)
 expr_stmt|;
 name|lock
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 block|}
