@@ -1032,7 +1032,7 @@ argument_list|)
 expr_stmt|;
 name|l
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 name|assertTrue
@@ -1047,7 +1047,7 @@ argument_list|)
 expr_stmt|;
 name|l2
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 comment|// Make sure we can obtain first one again, test isLocked():
@@ -1079,7 +1079,7 @@ argument_list|)
 expr_stmt|;
 name|l
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 name|assertFalse
@@ -1150,7 +1150,7 @@ argument_list|)
 expr_stmt|;
 name|l
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 name|assertFalse
@@ -1244,7 +1244,7 @@ argument_list|)
 expr_stmt|;
 name|l2
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 name|fail
@@ -1265,7 +1265,7 @@ finally|finally
 block|{
 name|l
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 block|}
@@ -2191,10 +2191,10 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|release
+DECL|method|close
 specifier|public
 name|void
-name|release
+name|close
 parameter_list|()
 block|{
 comment|// do nothing
