@@ -259,17 +259,17 @@ block|}
 block|}
 annotation|@
 name|Override
-DECL|method|release
+DECL|method|close
 specifier|public
 name|void
-name|release
+name|close
 parameter_list|()
 throws|throws
 name|IOException
 block|{
 name|delegateLock
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 name|dir
