@@ -847,7 +847,7 @@ try|try
 block|{
 name|lock
 operator|.
-name|release
+name|close
 argument_list|()
 expr_stmt|;
 block|}
